--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -13,7 +13,7 @@
                           <ul class="product-links d-flex justify-content-center">
 
                               <li>
-                                  <a href="#" data-toggle="modal" data-target="#quick-view">
+                                  <a href="#" data-toggle="modal" [attr.data-target]="'#quick-view-'+product.idProduct">
                                       <span data-toggle="tooltip" data-placement="bottom" title="Quick view" class="icon-magnifier"></span>
                                   </a>
                               </li>
@@ -41,3 +41,4 @@
       </div>
   </div>
 </div>
+<app-modal-quick-view [products] ="products"></app-modal-quick-view>
