--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -31,7 +31,7 @@
                           </div>
                           <div class="d-flex align-items-center justify-content-between">
                               <h6 class="product-price">{{product.price}} €</h6>
-                              <button class="pro-btn" data-toggle="modal" data-target="#add-to-cart"><i class="icon-basket"></i></button>
+                              <button class="pro-btn" data-toggle="modal" [attr.data-target]="'#add-to-cart-'+product.idProduct"><i class="icon-basket"></i></button>
                           </div>
                       </div>
                   </div>
@@ -42,3 +42,4 @@
   </div>
 </div>
 <app-modal-quick-view [products] ="products"></app-modal-quick-view>
+<app-modal-add-cart [products] ="products"></app-modal-add-cart>
