--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -66,12 +66,12 @@
                           <ul class="d-flex">
 
                               <li class="mr-0 cart-block position-relative">
-                                  <a class="offcanvas-toggle" routerLink="/card">
+                                  <a class="offcanvas-toggle" routerLink="/cart">
                                       <span class="position-relative">
                                           <i class="icon-bag"></i>
-                                          <span class="badge cbdg1">7</span>
+                                          <span class="badge cbdg1">{{cartData.len}}</span>
                                       </span>
-                                      <span class="cart-total position-relative" >$199</span>
+                                      <span class="cart-total position-relative" >{{cartData.cost}} €</span>
                                   </a>
                               </li>
                               <!-- cart block end -->
