--- a/src/app/shop/modal-add-cart/modal-add-cart.component.html
+++ b/src/app/shop/modal-add-cart/modal-add-cart.component.html
@@ -30,11 +30,9 @@
                           <p><strong>TVA 20% :</strong>&nbsp;{{ (product.price * 0.2).toFixed(2)}} €</p>
                           <p><strong>Total:</strong>&nbsp;{{ (product.price * 1.2).toFixed(2)}} €</p>
                           <div class="cart-content-btn">
-                              <button type="button" class="btn theme-btn--dark1 btn--md mt-4 mr-2" data-dismiss="modal">Continue
-                          shopping</button>
+                              <button type="button" class="btn theme-btn--dark1 btn--md mt-4 mr-2" data-dismiss="modal">Continuer mes achats</button>
                               <button routerLink="/checkout" class="btn theme-btn--dark1 btn--md mt-4" data-dismiss="modal"><i
-                              class="ion-checkmark-round"></i>Proceed to
-                          checkout</button>
+                              class="ion-checkmark-round"></i>Voir mon panier</button>
                           </div>
                       </div>
                   </div>
