pagination et category

--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,1 +1,3 @@
-<p>category works!</p>
+<app-header></app-header>
+<app-products [products]="products" [isPaginate]="false"></app-products>
+<app-footer></app-footer>
