--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="tab-content container" id="pills-tabContent">
 
-  <nav aria-label="Page navigation ecommerce" >
+  <nav aria-label="Page navigation ecommerce" *ngIf="isPaginate">
     <ul class="pagination">
         <li class="page-item" (click)="prevPage()">
             <a class="page-link" href="#" aria-label="Previous">
@@ -23,7 +23,7 @@
                   <div class="card-body">
                       <div class="product-thumbnail position-relative">
                           <span class="badge badge-danger top-right">New</span>
-                          <a>
+                          <a [routerLink]="['/single-product',product.idProduct]">
                               <img class="first-img" width="420" [src]="prefUrlImage+product.image" alt="thumbnail">
                           </a>
                           <!-- product links -->
