--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,1 +1,117 @@
-<p>register works!</p>
+<!-- breadcrumb-section start -->
+<nav class="breadcrumb-section theme1 bg-lighten2 pt-110 pb-110">
+  <div class="container">
+      <div class="row">
+          <div class="col-12">
+              <div class="section-title text-center mb-15">
+                  <h2 class="title text-dark text-capitalize">Inscription</h2>
+              </div>
+          </div>
+          <div class="col-12">
+              <ol class="breadcrumb bg-transparent m-0 p-0 align-items-center justify-content-center">
+                  <li class="breadcrumb-item"><a>Accueil</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Inscription</li>
+              </ol>
+          </div>
+      </div>
+  </div>
+</nav>
+<!-- breadcrumb-section end -->
+<!-- product tab start -->
+<div class="register pt-80 pb-80">
+  <div class="container">
+      <div class="row">
+          <div class="col-12">
+              <h3 class="title mb-30 pb-25">Création de mon compte</h3>
+              <div class="log-in-form">
+                  <form class="personal-information" [formGroup]="registerForm" ngNoForm>
+                    <div class="alert alert-danger alert-block text-center" role="alert" *ngIf="errorMessage">{{errorMessage}}</div>
+                    <div class="alert alert-success alert-block text-center" role="alert" *ngIf="successMessage">{{successMessage}}</div>
+
+                      <div class="order-asguest theme1 mb-3">
+                          <span>Vous avez déjà un compte ?</span>
+                          <a class="text-muted hover-color" routerLink="/login"> Connectez-vous !</a>
+                      </div>
+                      <div class="form-group row">
+                          <label class="col-md-3 col-form-label">
+                            Civilité
+                        </label>
+                          <div class="col-md-6">
+                              <div class="d-flex flex-wrap">
+                                  <div class="custom-radio">
+                                      <input value="1" formControlName="sexe" type="radio" id="test1" name="sexe">
+                                      <label for="test1">Mr</label>
+                                  </div>
+                                  <div class="custom-radio">
+                                      <input value="2" type="radio" id="test2" formControlName="sexe" name="sexe">
+                                      <label for="test2">Mme</label>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+                      <div class="form-group row">
+                          <label for="pseudo" class="col-md-3 col-form-label">Pseudo</label>
+                          <div class="col-md-6">
+                              <input type="text" id="pseudo" formControlName="pseudo" name="pseudo" class="form-control">
+                          </div>
+                      </div>
+
+                      <div class="form-group row">
+                          <label for="firstname" class="col-md-3 col-form-label">Nom</label>
+                          <div class="col-md-6">
+                              <input type="text" id="firstname" formControlName="firstname" name="firstname" class="form-control">
+                          </div>
+                      </div>
+                      <div class="form-group row">
+                          <label for="lastname" class="col-md-3 col-form-label">Prénom</label>
+                          <div class="col-md-6">
+                              <input type="text" id="lastname" formControlName="lastname" name="lastname" class="form-control">
+                          </div>
+                      </div>
+                      <div class="form-group row">
+                          <label for="email" class="col-md-3 col-form-label">Email</label>
+                          <div class="col-md-6">
+                              <input type="email" id="email" formControlName="email" name="email" class="form-control">
+                          </div>
+                      </div>
+
+                      <div class="form-group row">
+                          <label for="Password" class="col-md-3 col-form-label">Mot de passe</label>
+                          <div class="col-md-6">
+                              <div class="input-group mb-2 mr-sm-2">
+                                  <input type="password" class="form-control" id="Password"  formControlName="password" name="password">
+                                  <div class="input-group-prepend">
+                                      <button type="button" class="input-group-text theme-btn--dark1 btn--md show-password">voir</button>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+                      <div class="form-group row">
+                          <label for="birthdate" class="col-md-3 col-form-label">Date de naissance</label>
+                          <div class="col-md-6">
+                              <input type="text" class="form-control" id="birthdate" formControlName="dateBirth" name="dateBirth" placeholder="MM/DD/YYYY">
+                          </div>
+                          <div class="col-md-3"><label><span class="optional">
+                                    Optional
+                                </span></label>
+                          </div>
+                      </div>
+
+                      <div class="form-group row">
+                         <div class="col-md-6 offset-md-3">
+                           <div class="login-form-links">
+                             <div class="sign-btn">
+                            <button (click)="onSubmit()" class="btn theme-btn--dark1 btn--md" [disabled]="registerForm.invalid">Valider mon inscription</button>
+                          </div>
+                          </div>
+                          </div>
+                    </div>
+
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
