installation de module de paiement

--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -50,7 +50,7 @@
                       </ul>
                   </li>
                   <li class="list-group-item text-center">
-
+                    <app-button-paypal [price]="(cartData.cost * 1.2).toFixed(2)"></app-button-paypal>
                       <div id="paypal-button-container" class="">Finaliser ma commande</div>
 
                   </li>
