--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -71,7 +71,7 @@
                                           <i class="icon-bag"></i>
                                           <span class="badge cbdg1">{{cartData.len}}</span>
                                       </span>
-                                      <span class="cart-total position-relative" >{{cartData.cost}} €</span>
+                                      <span class="cart-total position-relative" >{{(cartData.cost).toFixed(2)}} €</span>
                                   </a>
                               </li>
                               <!-- cart block end -->
