--- a/src/app/shop/modal-add-cart/modal-add-cart.component.html
+++ b/src/app/shop/modal-add-cart/modal-add-cart.component.html
@@ -2,8 +2,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
           <div class="modal-header justify-content-center bg-dark">
-              <h5 class="modal-title" id="add-to-cartCenterTitle"> <span class="ion-checkmark-round"></span>
-                Produit ajouté avec succès à votre panier</h5>
+              <h5 class="modal-title" id="add-to-cartCenterTitle"> <span class="ion-checkmark-round"></span> Produit ajouté avec succès à votre panier</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
       </button>
@@ -13,26 +12,26 @@
                   <div class="col-lg-5 divide-right">
                       <div class="row">
                           <div class="col-md-6">
-                              <img width="360" [src]="prefUrlImage+product.image" alt="img">
+                              <img width="360" [src]="prefUrlImage+product.image" alt="{{product.name}}">
                           </div>
                           <div class="col-md-6 mb-2 mb-md-0">
                               <h4 class="product-name">{{product.name}}</h4>
-                              <h5 class="price">{{product.price}} €</h5>
+                              <h5 class="price">{{product.price}}€</h5>
                               <h6 class="quantity"><strong>Quantité:</strong>&nbsp;1</h6>
                           </div>
                       </div>
                   </div>
                   <div class="col-lg-7">
                       <div class="modal-cart-content">
-                          <p class="cart-products-count">Il y a 1 article dans votre panier.</p>
-                          <p><strong>Total produits:</strong>&nbsp;{{product.price}} €</p>
-                          <p><strong>Total livraison:</strong>&nbsp;0.00 €  </p>
-                          <p><strong>TVA 20% :</strong>&nbsp;{{ (product.price * 0.2).toFixed(2)}} €</p>
-                          <p><strong>Total:</strong>&nbsp;{{ (product.price * 1.2).toFixed(2)}} €</p>
+                          <p class="cart-products-count">There is 1 item in your cart.</p>
+                          <p><strong>Total produits:</strong>&nbsp;{{product.price}}€</p>
+                          <p><strong>Livraison:</strong>&nbsp;0.00 € </p>
+                          <p><strong>Tva 20% :</strong>&nbsp;{{(product.price*0.2).toFixed(2)}} €</p>
+                          <p><strong>Total:</strong>&nbsp;{{(product.price*1.2).toFixed(2)}}€</p>
                           <div class="cart-content-btn">
-                              <button type="button" class="btn theme-btn--dark1 btn--md mt-4 mr-2" data-dismiss="modal">Continuer mes achats</button>
+                              <button type="button" class="btn theme-btn--dark1 btn--md mt-4 mr-2" data-dismiss="modal">Continuer les achats</button>
                               <button routerLink="/checkout" class="btn theme-btn--dark1 btn--md mt-4" data-dismiss="modal"><i
-                              class="ion-checkmark-round"></i>Voir mon panier</button>
+                              class="ion-checkmark-round"></i>Commander</button>
                           </div>
                       </div>
                   </div>
