--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -18,19 +18,19 @@
 
   <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
       <div class="row grid-view theme1">
-          <div class="col-sm-6 col-md-4 mb-30" *ngFor="let product of products">
+          <div class="col-sm-6 col-md-4 mb-30" *ngFor="let product of products, let i= index">
               <div class="card product-card">
                   <div class="card-body">
                       <div class="product-thumbnail position-relative">
                           <span class="badge badge-danger top-right">New</span>
-                          <a [routerLink]="['/single-product',product.idProduct]">
-                              <img class="first-img" width="420" [src]="prefUrlImage+product.image" alt="thumbnail">
+                          <a [routerLink]="['/single-product', product.idProduct]">
+                              <img class="first-img" width="420" [src]="prefUrlImage + product.image" alt="{{product.name}}">
                           </a>
                           <!-- product links -->
                           <ul class="product-links d-flex justify-content-center">
 
                               <li>
-                                  <a href="#" data-toggle="modal" [attr.data-target]="'#quick-view-'+product.idProduct">
+                                  <a href="#" data-toggle="modal" [attr.data-target]="'#quick-view'+product.idProduct">
                                       <span data-toggle="tooltip" data-placement="bottom" title="Quick view" class="icon-magnifier"></span>
                                   </a>
                               </li>
@@ -48,7 +48,7 @@
                           </div>
                           <div class="d-flex align-items-center justify-content-between">
                               <h6 class="product-price">{{product.price}} €</h6>
-                              <button class="pro-btn" data-toggle="modal" [attr.data-target]="'#add-to-cart-'+product.idProduct"><i class="icon-basket"></i></button>
+                              <button class="pro-btn" data-toggle="modal" [attr.data-target]="'#add-to-cart-'+product.idProduct" (click)="addToCart(product)"><i class="icon-basket"></i></button>
                           </div>
                       </div>
                   </div>
@@ -58,5 +58,6 @@
       </div>
   </div>
 </div>
-<app-modal-quick-view [products] ="products"></app-modal-quick-view>
-<app-modal-add-cart [products] ="products"></app-modal-add-cart>
+
+<app-modal-quick-view [products]="products"></app-modal-quick-view>
+<app-modal-add-cart [products]="products"></app-modal-add-cart>
